[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'xth-net-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[features]
default = []
std = ['xth-net-runtime/std']
[dependencies.xth-net-runtime]
default-features = false
path = '..'
