[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Dothereum <admin@dothereum.net>']
edition = '2018'
name = 'xth-runtime-wasm'
version = '0.1.0'

[workspace]
members = []

[features]
default = []
std = ['xth-runtime/std']
[dependencies.xth-runtime]
default-features = false
path = '..'
